--- a/iPhone/Hipster Coffee/Hipster Coffee/en.lproj/MainStoryboard.storyboard
+++ b/iPhone/Hipster Coffee/Hipster Coffee/en.lproj/MainStoryboard.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.0" toolsVersion="1938" systemVersion="11D50b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="aqj-Da-4vi">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11D50b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="aqj-Da-4vi">
     <dependencies>
-        <deployment defaultVersion="1280" identifier="iOS"/>
+        <deployment defaultVersion="1296" identifier="iOS"/>
         <development defaultVersion="4200" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="933"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1179"/>
     </dependencies>
     <scenes>
+        <!--Map View Controller-->
         <scene sceneID="5">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
@@ -45,6 +46,7 @@
             </objects>
             <point key="canvasLocation" x="619" y="167"/>
         </scene>
+        <!--Add Venue Table View Controller-->
         <scene sceneID="sKW-4S-5vZ">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H6i-WH-afR" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -94,6 +96,7 @@
             </objects>
             <point key="canvasLocation" x="1156" y="-282"/>
         </scene>
+        <!--Navigation Controller-->
         <scene sceneID="Z00-cS-tzf">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gIv-lJ-OYs" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -111,6 +114,7 @@
             </objects>
             <point key="canvasLocation" x="186" y="168"/>
         </scene>
+        <!--Venue View Controller-->
         <scene sceneID="keG-lW-AQM">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P2i-G0-cZ9" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -252,16 +256,37 @@
                     <navigationItem key="navigationItem" id="q04-Ee-LbP"/>
                     <connections>
                         <outlet property="coffeePrice" destination="oTc-BA-j6l" id="NFr-VK-KMk"/>
+                        <outlet property="imageScrollView" destination="ubH-sq-ZI4" id="4AF-Np-BcT"/>
                         <outlet property="powerOutlets" destination="AfF-33-wf0" id="i6F-va-UHI"/>
                         <outlet property="powerOutletsLabel" destination="ZpW-dX-yGo" id="nbf-KG-8Az"/>
                         <outlet property="wifiPassword" destination="CbK-lG-MhE" id="JjL-oC-j7f"/>
                         <outlet property="wifiSSID" destination="3uo-N2-SjT" id="i1a-uA-G6D"/>
+                        <outletCollection property="imageViews" destination="Dfy-pX-QUO" id="Qhz-CC-RYz"/>
+                        <outletCollection property="imageViews" destination="2bF-bd-SSX" id="LVc-pe-FOR"/>
+                        <outletCollection property="imageViews" destination="FNL-2x-4e4" id="rXy-vj-seG"/>
                     </connections>
                 </tableViewController>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="image1.jpg" id="Dfy-pX-QUO">
+                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="image2.jpg" id="2bF-bd-SSX">
+                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="image3.jpg" id="FNL-2x-4e4">
+                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </imageView>
             </objects>
             <point key="canvasLocation" x="1704" y="167"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="image1.jpg" width="173" height="130"/>
+        <image name="image2.jpg" width="168" height="136"/>
+        <image name="image3.jpg" width="172" height="128"/>
+    </resources>
     <classes>
         <class className="AddVenueTableViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/AddVenueTableViewController.h"/>
@@ -280,10 +305,12 @@
                 <relationship kind="action" name="saveChangesToVenue"/>
                 <relationship kind="action" name="updateViewForCurrentVenue"/>
                 <relationship kind="outlet" name="coffeePrice" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="imageScrollView" candidateClass="UIScrollView"/>
                 <relationship kind="outlet" name="powerOutlets" candidateClass="UISegmentedControl"/>
                 <relationship kind="outlet" name="powerOutletsLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="wifiPassword" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="wifiSSID" candidateClass="UITextField"/>
+                <relationship kind="outletCollection" name="imageViews" candidateClass="UIImageView"/>
             </relationships>
         </class>
     </classes>
